--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- 头部 -->
-  <div class="layui-mian">
+  <div class="layui-main">
     <img src="/assets/images/logo.png" alt="" />
   </div>
 
