--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </dl>
           </li>
           <li class="layui-nav-item">
-            <a href=""><span class="iconfont icon-tuichu"></span>退出</a>
+            <a href="JavaScript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a>
           </li>
         </ul>
       </div>
@@ -93,5 +93,10 @@
     </div>
     <!-- 导入 layui 的JS文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- jqurey -->
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
+    <!-- 导入自己的js -->
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
