--- a/article/art_cate.html
+++ b/article/art_cate.html
@@ -53,13 +53,13 @@
         <div class="layui-form-item">
           <label class="layui-form-label">分类名称</label>
           <div class="layui-input-block">
-            <input type="text" name="name" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
+            <input type="text" name="name" required lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input" />
           </div>
         </div>
         <div class="layui-form-item">
           <label class="layui-form-label">分类别名</label>
           <div class="layui-input-block">
-            <input type="text" name="alias" required  lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
+            <input type="text" name="alias" required lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input" />
           </div>
         </div>
         <div class="layui-form-item">
@@ -75,17 +75,17 @@
     <script type="text/html" id="dialog-edit">
       <form class="layui-form" id="form-edit" lay-filter="form-edit">
         <!-- 隐藏域，保存 Id 的值 -->
-        <input type="hidden" name="Id">
+        <input type="hidden" name="Id" />
         <div class="layui-form-item">
           <label class="layui-form-label">分类名称</label>
           <div class="layui-input-block">
-            <input type="text" name="name" required  lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input">
+            <input type="text" name="name" required lay-verify="required" placeholder="请输入分类名称" autocomplete="off" class="layui-input" />
           </div>
         </div>
         <div class="layui-form-item">
           <label class="layui-form-label">分类别名</label>
           <div class="layui-input-block">
-            <input type="text" name="alias" required  lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input">
+            <input type="text" name="alias" required lay-verify="required" placeholder="请输入分类别名" autocomplete="off" class="layui-input" />
           </div>
         </div>
         <div class="layui-form-item">
@@ -95,6 +95,7 @@
         </div>
       </form>
     </script>
+    
 
     <!-- 导入 layui 的js -->
     <script src="/assets/lib/layui/layui.all.js"></script>
@@ -105,6 +106,6 @@
     <!-- 导入模板引擎 -->
     <script src="/assets/lib/template-web.js"></script>
     <!-- 导入自己的 js -->
-    <script src="/assets/js/article/art_cate.js"></script>
+    <script src="/assets/js/article/art-cate.js"></script>
   </body>
 </html>
